--- a/1-podatku-dla-naszej-druzyny/index.html
+++ b/1-podatku-dla-naszej-druzyny/index.html
@@ -481,6 +481,13 @@ height: 900px !important;
 
 element.style {
  color: #3C4858;
+}
+.entry-author-link,
+.entry-permalink,
+.entry-date,
+.entry-meta
+.author-name{
+display: none;
 }		</style>
 	</head>
 
