--- a/1-podatku-dla-naszej-druzyny/index.html
+++ b/1-podatku-dla-naszej-druzyny/index.html
@@ -490,7 +490,7 @@ display: none;
 }		</style>
 	</head>
 
-<body class="page-template page-template-page-templates page-template-template-pagebuilder-full-width page-template-page-templatestemplate-pagebuilder-full-width-php page page-id-34 translatepress-pl_PL tribe-no-js blog-post header-layout-no-content elementor-default elementor-page elementor-page-34">
+<body class="page-template page-template-page-templates page-template-template-pagebuilder-full-width page-template-page-templatestemplate-pagebuilder-full-width-php page page-id-34 translatepress-pl_PL tribe-no-js tribe-bar-is-disabled blog-post header-layout-no-content elementor-default elementor-page elementor-page-34">
 	<div class="wrapper  no-content">
 		<header class="header">
 			<div style="display: none"></div>		<nav class="navbar navbar-default navbar-fixed-top  hestia_left navbar-not-transparent">
