--- a/event/199/index.html
+++ b/event/199/index.html
@@ -561,7 +561,7 @@ display: none;
 }		</style>
 	</head>
 
-<body class="tribe_events-template-default single single-tribe_events postid-199 translatepress-pl_PL tribe-no-js tribe-filter-live blog-post header-layout-no-content events-single tribe-events-style-full elementor-default tribe-theme-hestia-pro tribe-events-page-template">
+<body class="tribe_events-template-default single single-tribe_events postid-199 translatepress-pl_PL tribe-no-js tribe-filter-live tribe-bar-is-disabled blog-post header-layout-no-content events-single tribe-events-style-full elementor-default tribe-theme-hestia-pro tribe-events-page-template">
 	<div class="wrapper post-199 tribe_events type-tribe_events status-publish hentry no-content">
 		<header class="header">
 			<div style="display: none"></div>		<nav class="navbar navbar-default navbar-fixed-top  hestia_left navbar-not-transparent">
