--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ display: none;
 }		</style>
 	</head>
 
-<body class="home page-template-default page page-id-37 translatepress-pl_PL tribe-no-js blog-post header-layout-no-content elementor-default elementor-page elementor-page-37">
+<body class="home page-template-default page page-id-37 translatepress-pl_PL tribe-no-js tribe-bar-is-disabled blog-post header-layout-no-content elementor-default elementor-page elementor-page-37">
 	<div class="wrapper">
 		<header class="header">
 			<div style="display: none"></div>		<nav class="navbar navbar-default navbar-fixed-top  navbar-color-on-scroll navbar-transparent hestia_left">
