--- a/o-nas/index.html
+++ b/o-nas/index.html
@@ -435,7 +435,14 @@ element.style {
 .entry-meta
 .author-name{
 display: none;
-}		</style>
+}
+.hestia-scroll-to-top {
+ 
+ background-color: #84a311; 
+
+}
+.hestia-scroll-to-top:hover {
+    background-color: #84a311;		</style>
 	</head>
 
 <body class="page-template page-template-page-templates page-template-template-pagebuilder-full-width page-template-page-templatestemplate-pagebuilder-full-width-php page page-id-26 translatepress-pl_PL tribe-no-js tribe-bar-is-disabled blog-post header-layout-no-content elementor-default elementor-page elementor-page-26">
@@ -459,7 +466,6 @@ display: none;
 					</div>
 				</div>
 		<div id="main-navigation" class="collapse navbar-collapse"><ul id="menu-menu-glowne" class="nav navbar-nav"><li id="menu-item-51" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-26 current_page_item menu-item-51 active"><a title="O Nas" href="./index.html">O Nas</a></li>
-<li id="menu-item-206" class="menu-item menu-item-type-post_type_archive menu-item-object-tribe_events menu-item-206"><a title="Zbiórki" href="./../events/index.html">Zbiórki</a></li>
 <li id="menu-item-97" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-97"><a title="Aktualnośći" href="./../aktualnosci/index.html">Aktualnośći</a></li>
 <li id="menu-item-49" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-49"><a title="Dla Rodziców" href="./../dla-rodzicow/index.html">Dla Rodziców</a></li>
 <li id="menu-item-48" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-48"><a title="Galeria" href="./../galeria/index.html">Galeria</a></li>
@@ -563,7 +569,7 @@ Opracowanie i obsługa techniczna – <a>Błażej Róż</a>			</div>
 				<button class="hestia-scroll-to-top">
 			<i class="fa fa-angle-double-up" aria-hidden="true"></i>
 		</button>
-		<script> /* <![CDATA[ */var tribe_l10n_datatables = {"aria":{"sort_ascending":": activate to sort column ascending","sort_descending":": activate to sort column descending"},"length_menu":"Show _MENU_ entries","empty_table":"No data available in table","info":"Showing _START_ to _END_ of _TOTAL_ entries","info_empty":"Showing 0 to 0 of 0 entries","info_filtered":"(filtered from _MAX_ total entries)","zero_records":"No matching records found","search":"Search:","all_selected_text":"All items on this page were selected. ","select_all_link":"Select all pages","clear_selection":"Clear Selection.","pagination":{"all":"All","next":"Nast\u0119pny","previous":"Previous"},"select":{"rows":{"0":"","_":": Selected %d rows","1":": Selected 1 row"}},"datepicker":{"dayNames":["niedziela","poniedzia\u0142ek","wtorek","\u015broda","czwartek","pi\u0105tek","sobota"],"dayNamesShort":["nie","pon","wt","\u015br","czw","pt","sob"],"dayNamesMin":["N","P","W","\u015a","C","P","S"],"monthNames":["Stycze\u0144","Luty","Marzec","Kwiecie\u0144","Maj","Czerwiec","Lipiec","Sierpie\u0144","Wrzesie\u0144","Pa\u017adziernik","Listopad","Grudzie\u0144"],"monthNamesShort":["Stycze\u0144","Luty","Marzec","Kwiecie\u0144","Maj","Czerwiec","Lipiec","Sierpie\u0144","Wrzesie\u0144","Pa\u017adziernik","Listopad","Grudzie\u0144"],"monthNamesMin":["Sty","Lut","Mar","Kwi","Maj","Cze","Lip","Sie","Wrz","Pa\u017a","Lis","Gru"],"nextText":"Nast\u0119pny","prevText":"Poprzedni","currentText":"Dzisiaj","closeText":"Gotowe","today":"Dzisiaj","clear":"Wyczy\u015b\u0107"}};var tribe_system_info = {"sysinfo_optin_nonce":"dbffc14226","clipboard_btn_text":"Copy to clipboard","clipboard_copied_text":"System info copied","clipboard_fail_text":"Press \"Cmd + C\" to copy"};/* ]]> */ </script><script type='text/javascript' src='./../wp-includes/js/jquery/ui/core.min.js?ver=1.11.4'></script>
+		<script> /* <![CDATA[ */var tribe_l10n_datatables = {"aria":{"sort_ascending":": activate to sort column ascending","sort_descending":": activate to sort column descending"},"length_menu":"Show _MENU_ entries","empty_table":"No data available in table","info":"Showing _START_ to _END_ of _TOTAL_ entries","info_empty":"Showing 0 to 0 of 0 entries","info_filtered":"(filtered from _MAX_ total entries)","zero_records":"No matching records found","search":"Search:","all_selected_text":"All items on this page were selected. ","select_all_link":"Select all pages","clear_selection":"Clear Selection.","pagination":{"all":"All","next":"Nast\u0119pny","previous":"Previous"},"select":{"rows":{"0":"","_":": Selected %d rows","1":": Selected 1 row"}},"datepicker":{"dayNames":["niedziela","poniedzia\u0142ek","wtorek","\u015broda","czwartek","pi\u0105tek","sobota"],"dayNamesShort":["nie","pon","wt","\u015br","czw","pt","sob"],"dayNamesMin":["N","P","W","\u015a","C","P","S"],"monthNames":["Stycze\u0144","Luty","Marzec","Kwiecie\u0144","Maj","Czerwiec","Lipiec","Sierpie\u0144","Wrzesie\u0144","Pa\u017adziernik","Listopad","Grudzie\u0144"],"monthNamesShort":["Stycze\u0144","Luty","Marzec","Kwiecie\u0144","Maj","Czerwiec","Lipiec","Sierpie\u0144","Wrzesie\u0144","Pa\u017adziernik","Listopad","Grudzie\u0144"],"monthNamesMin":["Sty","Lut","Mar","Kwi","Maj","Cze","Lip","Sie","Wrz","Pa\u017a","Lis","Gru"],"nextText":"Nast\u0119pny","prevText":"Poprzedni","currentText":"Dzisiaj","closeText":"Gotowe","today":"Dzisiaj","clear":"Wyczy\u015b\u0107"}};var tribe_system_info = {"sysinfo_optin_nonce":"ef7e923697","clipboard_btn_text":"Copy to clipboard","clipboard_copied_text":"System info copied","clipboard_fail_text":"Press \"Cmd + C\" to copy"};/* ]]> */ </script><script type='text/javascript' src='./../wp-includes/js/jquery/ui/core.min.js?ver=1.11.4'></script>
 <script type='text/javascript' src='./../wp-includes/js/jquery/ui/effect.min.js?ver=1.11.4'></script>
 <script type='text/javascript' src='./../wp-includes/js/jquery/ui/effect-shake.min.js?ver=1.11.4'></script>
 <script type='text/javascript' src='./../wp-includes/js/comment-reply.min.js?ver=5.0.3'></script>
