--- a/events/2019-01/index.html
+++ b/events/2019-01/index.html
@@ -503,7 +503,14 @@ element.style {
 .entry-meta
 .author-name{
 display: none;
-}		</style>
+}
+.hestia-scroll-to-top {
+ 
+ background-color: #84a311; 
+
+}
+.hestia-scroll-to-top:hover {
+    background-color: #84a311;		</style>
 	</head>
 
 <body class="archive post-type-archive post-type-archive-tribe_events translatepress-pl_PL tribe-no-js tribe-filter-live tribe-bar-is-disabled header-layout-no-content events-gridview events-archive tribe-events-style-full elementor-default tribe-theme-hestia-pro tribe-events-page-template">
@@ -527,7 +534,6 @@ display: none;
 					</div>
 				</div>
 		<div id="main-navigation" class="collapse navbar-collapse"><ul id="menu-menu-glowne" class="nav navbar-nav"><li id="menu-item-51" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-51"><a title="O Nas" href="./../../o-nas/index.html">O Nas</a></li>
-<li id="menu-item-206" class="menu-item menu-item-type-post_type_archive menu-item-object-tribe_events current-menu-item current-menu-item current_page_item menu-item-206 active"><a title="Zbiórki" href="./../index.html">Zbiórki</a></li>
 <li id="menu-item-97" class="menu-item menu-item-type-post_type menu-item-object-page current_page_parent menu-item-97"><a title="Aktualnośći" href="./../../aktualnosci/index.html">Aktualnośći</a></li>
 <li id="menu-item-49" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-49"><a title="Dla Rodziców" href="./../../dla-rodzicow/index.html">Dla Rodziców</a></li>
 <li id="menu-item-48" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-48"><a title="Galeria" href="./../../galeria/index.html">Galeria</a></li>
@@ -1381,7 +1387,7 @@ Opracowanie i obsługa techniczna – <a>Błażej Róż</a>			</div>
 				<button class="hestia-scroll-to-top">
 			<i class="fa fa-angle-double-up" aria-hidden="true"></i>
 		</button>
-		<script> /* <![CDATA[ */var tribe_l10n_datatables = {"aria":{"sort_ascending":": activate to sort column ascending","sort_descending":": activate to sort column descending"},"length_menu":"Show _MENU_ entries","empty_table":"No data available in table","info":"Showing _START_ to _END_ of _TOTAL_ entries","info_empty":"Showing 0 to 0 of 0 entries","info_filtered":"(filtered from _MAX_ total entries)","zero_records":"No matching records found","search":"Search:","all_selected_text":"All items on this page were selected. ","select_all_link":"Select all pages","clear_selection":"Clear Selection.","pagination":{"all":"All","next":"Nast\u0119pny","previous":"Previous"},"select":{"rows":{"0":"","_":": Selected %d rows","1":": Selected 1 row"}},"datepicker":{"dayNames":["niedziela","poniedzia\u0142ek","wtorek","\u015broda","czwartek","pi\u0105tek","sobota"],"dayNamesShort":["nie","pon","wt","\u015br","czw","pt","sob"],"dayNamesMin":["N","P","W","\u015a","C","P","S"],"monthNames":["Stycze\u0144","Luty","Marzec","Kwiecie\u0144","Maj","Czerwiec","Lipiec","Sierpie\u0144","Wrzesie\u0144","Pa\u017adziernik","Listopad","Grudzie\u0144"],"monthNamesShort":["Stycze\u0144","Luty","Marzec","Kwiecie\u0144","Maj","Czerwiec","Lipiec","Sierpie\u0144","Wrzesie\u0144","Pa\u017adziernik","Listopad","Grudzie\u0144"],"monthNamesMin":["Sty","Lut","Mar","Kwi","Maj","Cze","Lip","Sie","Wrz","Pa\u017a","Lis","Gru"],"nextText":"Nast\u0119pny","prevText":"Poprzedni","currentText":"Dzisiaj","closeText":"Gotowe","today":"Dzisiaj","clear":"Wyczy\u015b\u0107"}};var tribe_system_info = {"sysinfo_optin_nonce":"dbffc14226","clipboard_btn_text":"Copy to clipboard","clipboard_copied_text":"System info copied","clipboard_fail_text":"Press \"Cmd + C\" to copy"};/* ]]> */ </script><script type='text/javascript'>
+		<script> /* <![CDATA[ */var tribe_l10n_datatables = {"aria":{"sort_ascending":": activate to sort column ascending","sort_descending":": activate to sort column descending"},"length_menu":"Show _MENU_ entries","empty_table":"No data available in table","info":"Showing _START_ to _END_ of _TOTAL_ entries","info_empty":"Showing 0 to 0 of 0 entries","info_filtered":"(filtered from _MAX_ total entries)","zero_records":"No matching records found","search":"Search:","all_selected_text":"All items on this page were selected. ","select_all_link":"Select all pages","clear_selection":"Clear Selection.","pagination":{"all":"All","next":"Nast\u0119pny","previous":"Previous"},"select":{"rows":{"0":"","_":": Selected %d rows","1":": Selected 1 row"}},"datepicker":{"dayNames":["niedziela","poniedzia\u0142ek","wtorek","\u015broda","czwartek","pi\u0105tek","sobota"],"dayNamesShort":["nie","pon","wt","\u015br","czw","pt","sob"],"dayNamesMin":["N","P","W","\u015a","C","P","S"],"monthNames":["Stycze\u0144","Luty","Marzec","Kwiecie\u0144","Maj","Czerwiec","Lipiec","Sierpie\u0144","Wrzesie\u0144","Pa\u017adziernik","Listopad","Grudzie\u0144"],"monthNamesShort":["Stycze\u0144","Luty","Marzec","Kwiecie\u0144","Maj","Czerwiec","Lipiec","Sierpie\u0144","Wrzesie\u0144","Pa\u017adziernik","Listopad","Grudzie\u0144"],"monthNamesMin":["Sty","Lut","Mar","Kwi","Maj","Cze","Lip","Sie","Wrz","Pa\u017a","Lis","Gru"],"nextText":"Nast\u0119pny","prevText":"Poprzedni","currentText":"Dzisiaj","closeText":"Gotowe","today":"Dzisiaj","clear":"Wyczy\u015b\u0107"}};var tribe_system_info = {"sysinfo_optin_nonce":"ef7e923697","clipboard_btn_text":"Copy to clipboard","clipboard_copied_text":"System info copied","clipboard_fail_text":"Press \"Cmd + C\" to copy"};/* ]]> */ </script><script type='text/javascript'>
 /* <![CDATA[ */
 var TribeCalendar = {"ajaxurl":".\/wp-admin\/admin-ajax.php","post_type":"tribe_events"};
 /* ]]> */
