--- a/mundur/index.html
+++ b/mundur/index.html
@@ -444,7 +444,7 @@ display: none;
     background-color: #84a311;		</style>
 	</head>
 
-<body class="page-template page-template-templates page-template-builder-fullwidth-std page-template-templatesbuilder-fullwidth-std-php page page-id-225 translatepress-pl_PL blog-post header-layout-no-content elementor-default elementor-page elementor-page-225">
+<body class="page-template page-template-page-templates page-template-template-pagebuilder-full-width page-template-page-templatestemplate-pagebuilder-full-width-php page page-id-225 translatepress-pl_PL blog-post header-layout-no-content elementor-default elementor-page elementor-page-225">
 	<div class="wrapper  no-content">
 		<header class="header">
 			<div style="display: none"></div>		<nav class="navbar navbar-default navbar-fixed-top  hestia_left navbar-not-transparent">
@@ -479,7 +479,11 @@ display: none;
 </ul></div>			</div>
 					</nav>
 				</header>
-		<div data-elementor-type="post" data-elementor-id="225" class="elementor elementor-225" data-elementor-settings="[]">
+
+
+<div class="main">
+	<article id="post-225" class="section pagebuilder-section">
+			<div data-elementor-type="post" data-elementor-id="225" class="elementor elementor-225" data-elementor-settings="[]">
 			<div class="elementor-inner">
 				<div class="elementor-section-wrap">
 							<section data-id="1fdf5b6" class="elementor-element elementor-element-1fdf5b6 elementor-section-boxed elementor-section-height-default elementor-section-height-default elementor-section elementor-top-section" data-element_type="section">
@@ -589,7 +593,11 @@ display: none;
 						</div>
 			</div>
 		</div>
-							<footer class="footer  footer-big">
+		</article>
+</div>
+
+
+					<footer class="footer  footer-big">
 						<div class="container">
 																<div class="hestia-bottom-footer-content">					<div class="copyright hestia-center">
 				
