--- a/niezbednik-harcerza/index.html
+++ b/niezbednik-harcerza/index.html
@@ -442,7 +442,7 @@ display: none;
 <body class="page-template-default page page-id-223 translatepress-pl_PL blog-post header-layout-no-content elementor-default">
 	<div class="wrapper  no-content">
 		<header class="header">
-			<div style="display: none"></div>		<nav class="navbar navbar-default navbar-fixed-top  hestia_left navbar-not-transparent">
+			<div style="display: none"></div>		<nav class="navbar navbar-default navbar-fixed-top  hestia_center navbar-not-transparent">
 						<div class="container">
 						<div class="navbar-header">
 			<div class="title-logo-wrapper">
@@ -463,14 +463,20 @@ display: none;
 <li id="menu-item-227" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-223 current_page_item menu-item-has-children menu-item-227 dropdown active"><a title="Niezbędnik Harcerza" href="./index.html" class="dropdown-toggle">Niezbędnik Harcerza <span class="caret-wrap"><span class="caret"></span></span></a>
 <ul role="menu" class="dropdown-menu">
 	<li id="menu-item-228" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-228"><a title="Umundurowanie" href="./../mundur/index.html">Umundurowanie</a></li>
+	<li id="menu-item-273" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-273"><a title="Prawo i Przyrzeczenie Harcerskie" href="./../prawo-i-przyrzeczenie-harcerskie/index.html">Prawo i Przyrzeczenie Harcerskie</a></li>
 	<li id="menu-item-253" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-253"><a title="Próba harcerki/harcerza" href="./../proba-harcerki-harcerza/index.html">Próba harcerki/harcerza</a></li>
 	<li id="menu-item-254" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-254"><a title="Sprawności harcerskie" href="./../sprawnosci-harcerskie/index.html">Sprawności harcerskie</a></li>
+</ul>
+</li>
+<li id="menu-item-267" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-267 dropdown"><a title="Zbiórki" href="./../zbiorki/index.html" class="dropdown-toggle">Zbiórki <span class="caret-wrap"><span class="caret"></span></span></a>
+<ul role="menu" class="dropdown-menu">
+	<li id="menu-item-268" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-268"><a title="Kalendarz Zbiórek" href="https://calendar.time.ly/3zyxsglk/month">Kalendarz Zbiórek</a></li>
 </ul>
 </li>
 <li id="menu-item-97" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-97"><a title="Aktualnośći" href="./../aktualnosci/index.html">Aktualnośći</a></li>
 <li id="menu-item-49" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-49"><a title="Dla Rodziców" href="./../dla-rodzicow/index.html">Dla Rodziców</a></li>
 <li id="menu-item-48" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-48"><a title="Galeria" href="./../galeria/index.html">Galeria</a></li>
-<li id="menu-item-47" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47"><a title="1% Podatku Dla Naszej Drużyny" href="./../1-podatku-dla-naszej-druzyny/index.html">1% Podatku Dla Naszej Drużyny</a></li>
+<li id="menu-item-47" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47"><a title="1% Podatku Dla Naszej Drużyny" href="./../1-podatku-dla-naszej-druzyny/index.html">1%  Podatku Dla Naszej Drużyny</a></li>
 </ul></div>			</div>
 					</nav>
 				</header>
