--- a/aktualnosci/index.html
+++ b/aktualnosci/index.html
@@ -463,11 +463,7 @@ display: none;
 	<li id="menu-item-254" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-254"><a title="Sprawności harcerskie" href="./../sprawnosci-harcerskie/index.html">Sprawności harcerskie</a></li>
 </ul>
 </li>
-<li id="menu-item-267" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-267 dropdown"><a title="Zbiórki" href="./../zbiorki/index.html" class="dropdown-toggle">Zbiórki <span class="caret-wrap"><span class="caret"></span></span></a>
-<ul role="menu" class="dropdown-menu">
-	<li id="menu-item-268" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-268"><a title="Kalendarz Zbiórek" href="https://calendar.time.ly/3zyxsglk/month">Kalendarz Zbiórek</a></li>
-</ul>
-</li>
+<li id="menu-item-267" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-267"><a title="Zbiórki" href="./../zbiorki/index.html">Zbiórki</a></li>
 <li id="menu-item-97" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-23 current_page_item current_page_parent menu-item-97 active"><a title="Aktualnośći" href="./index.html">Aktualnośći</a></li>
 <li id="menu-item-49" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-49"><a title="Dla Rodziców" href="./../dla-rodzicow/index.html">Dla Rodziców</a></li>
 <li id="menu-item-48" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-48"><a title="Galeria" href="./../galeria/index.html">Galeria</a></li>
