--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pl-PL">
 
 <head>
+	<meta name="google-site-verification" content="njaliMQt8vb9kF8Sf_TprgL3G1BJ_cauh_ol8W_Y7hA" />
 	<meta charset='UTF-8'>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
